# Market-Hedge-Simulator

./: .dockerignore  .gitignore  .railwayignore  .replit  Dockerfile  README.md  app.py  catalog_app.py  contracts.db  next.config.js  nixpacks.toml  nixpicks.toml  package-lock.json  package.json  pyproject.toml  railway.json  replit.md  requirements.txt  simulator.py  tsconfig.json
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
attached_assets/: Pasted-Paste-this-into-your-README-Architecture-mermaid-flowch_1772732963691.txt  Pasted-Use-this-as-a-copy-paste-backlog-V1-ship-this-week-1-Is_1772729796167.txt  Pasted-Use-this-v1-2-spec-directly-python-core-types-v12-py-fr_1772734268310.txt
backtest/: __init__.py  db.py  engine.py  metrics.py  report.py  scheduler.py
core/: analytics.py  divergence.py  feasibility.py  frontier.py  liquidity.py  metrics.py  optimizer.py  paper_math.py  strategies.py  types_v12.py
dashboard/: next.config.js  package.json  tailwind.config.ts
lib/: mockData.ts
providers/: __init__.py  base.py  cache.py  kalshi.py  mock.py  polymarket.py
static/: analytics.js  backtest.html  catalog.html  event-markets.html  explainer.html  index.html  nav.js  paper.html  probability-gap.html  reports.html  simulator.html
tests/: test_api_client.mjs  test_backtest.py  test_phase3_reliability.mjs  test_providers.py  test_redesign_explainer_paper.py  (+5 more)
(+429 files in other folders)
