[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
]
